# nixos-vulnerability-roundup

./: .gitignore  LICENSE  README.md  default.nix
iterations/100/: github.adminer-4.7.7.json  github.air-1.15.1.json  github.airwave-1.3.3.json  github.asterisk-13.38.0.json  github.asterisk-16.15.0.json  github.asterisk-17.9.0.json  github.asterisk-18.1.0.json  github.avahi-0.7.json  github.avahi-0.8.json  github.batik-1.13.json  github.bolt-0.8.json  github.bolt-0.9.1.json  github.botan-1.10.17.json  github.c-ares-1.15.0.json  github.connect-1.105.json  github.cyrus-sasl-2.1.27.json  github.firefox-78.8.0esr.json  github.gerrit-3.2.6.json  github.git-2.29.3.json  github.git-2.30.1.json  github.glib-2.64.5.json  github.glib-2.66.4.json  github.glibc-2.31-74.json  github.glibc-2.32-37.json  github.go-1.14.15.json  github.go-1.4-bootstrap-20161024.json  github.gradle-4.10.3.json  github.gradle-5.6.4.json  (+101 more)
scripts/: .vulnerability_roundup.py.swp  roundup.py  ticket.py  vuln_roundup.py  vulnerability_roundup.py
survey/: Cargo.toml
survey/examples/: create.rs  search.rs
survey/fixtures/: fake_vulnix
survey/fixtures/iterations/1/: vulnix.nixos-18.03.json  vulnix.nixos-18.09.json  vulnix.nixos-unstable.json
survey/src/: advisory.rs  branches.rs  main.rs  nix.rs  package.rs  scan.rs  tests.rs  ticket.rs  tracker.rs
whitelists/: master.toml  nixos-18.03.toml  nixos-18.09.toml  nixos-19.03.toml  nixos-19.09.toml  nixos-20.03.toml  nixos-20.09.toml  nixos-21.05.toml  nixos-21.11.toml  nixos-unstable.toml  release-17.09.toml  release-18.03.toml  release-18.09.toml
(+3962 files in other folders)
