[package]
name = "survey"
version = "0.6.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = "NixOS advisory survey (used to feed vulnerability roundups)"
keywords = ["security"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = { version = "2", features = ["color", "wrap_help"] }
colored = "1.9"
crossbeam = "0.7.3"
dotenv = "0.15"
env_logger = "0.7.1"
float-ord = "0.2"
futures = { version = "0.3.5", features = ["compat"]}
git2 = { version = "0.13", default-features = false }
hubcaps = "0.5"
hyper = "0.12"
hyper-tls = "0.3"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
smallstr = "0.2"
structopt = "0.3"
subprocess = "0.2.4"
tempfile = "3.1"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.3"
libflate = "0.1.25"
maplit = "1"
tar = "0.4.25"
tempdir = "0.3.7"

[profile.release]
panic = "abort"
